...

@LightDarkPreview
@Composable
private fun PreviewCardSecurityCodeCVVInput() {
    SdkTheme {
        Surface(color = Theme.colors.surface) {
            CardSecurityCodeInput(value = "123", cardIssuer = CardIssuerType.VISA) {

            }
        }
    }
}

...
